# storage/api-docs/api-docs.json
@@ -15,31 +15,86 @@
         }
     ],
     "paths": {
-        "/health": {
-            "get": {
+        "/login": {
+            "post": {
                 "tags": [
-                    "Health"
+                    "Auth"
                 ],
-                "summary": "Check application health",
-                "operationId": "c09d93bf980e72e094876343292e7602",
+                "summary": "Авторизация пользователя",
+                "description": "авторизует и возвращает его данные вместе с JWT-токеном.",
+                "operationId": "2dd578ff7aba2721293dac66833b27d1",
+                "requestBody": {
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "required": [
+                                    "email",
+                                    "password"
+                                ],
+                                "properties": {
+                                    "email": {
+                                        "type": "string",
+                                        "format": "email",
+                                        "example": "user@example.com"
+                                    },
+                                    "password": {
+                                        "type": "string",
+                                        "format": "password",
+                                        "example": "password123"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
                 "responses": {
                     "200": {
-                        "description": "Application is healthy",
+                        "description": "Пользователь успешно авторизован",
                         "content": {
                             "application/json": {
                                 "schema": {
                                     "properties": {
-                                        "app": {
-                                            "type": "string",
-                                            "example": "ok"
+                                        "user": {
+                                            "properties": {
+                                                "id": {
+                                                    "type": "integer",
+                                                    "example": 1
+                                                },
+                                                "name": {
+                                                    "type": "string",
+                                                    "example": "Джон Доу"
+                                                },
+                                                "email": {
+                                                    "type": "string",
+                                                    "format": "email",
+                                                    "example": "john@example.com"
+                                                },
+                                                "phone": {
+                                                    "type": "string",
+                                                    "example": "+89123456789"
+                                                },
+                                                "is_blocked": {
+                                                    "type": "boolean",
+                                                    "example": false
+                                                },
+                                                "created_at": {
+                                                    "type": "string",
+                                                    "format": "date-time",
+                                                    "example": "2023-10-27T10:00:00.000000Z"
+                                                },
+                                                "updated_at": {
+                                                    "type": "string",
+                                                    "format": "date-time",
+                                                    "example": "2023-10-27T10:00:00.000000Z"
+                                                }
+                                            },
+                                            "type": "object"
                                         },
-                                        "database": {
+                                        "token": {
                                             "type": "string",
-                                            "example": "ok"
-                                        },
-                                        "redis": {
-                                            "type": "string",
-                                            "example": "ok"
+                                            "example": "eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9..."
                                         }
                                     },
                                     "type": "object"
@@ -47,23 +102,168 @@
                             }
                         }
                     },
-                    "503": {
-                        "description": "Service unavailable",
+                    "422": {
+                        "description": "Ошибка валидации",
                         "content": {
                             "application/json": {
                                 "schema": {
                                     "properties": {
-                                        "app": {
+                                        "type": {
                                             "type": "string",
-                                            "example": "failed"
+                                            "example": "https://example.com/errors/validation-error"
                                         },
-                                        "database": {
+                                        "title": {
                                             "type": "string",
-                                            "example": "failed"
+                                            "example": "Validation Error"
                                         },
-                                        "redis": {
+                                        "status": {
+                                            "type": "integer",
+                                            "example": 422
+                                        },
+                                        "detail": {
                                             "type": "string",
-                                            "example": "failed"
+                                            "example": "Произошла одна или несколько ошибок проверки."
+                                        },
+                                        "instance": {
+                                            "type": "string",
+                                            "example": "/api/login"
+                                        },
+                                        "errors": {
+                                            "properties": {
+                                                "email": {
+                                                    "type": "array",
+                                                    "items": {
+                                                        "type": "string",
+                                                        "example": "Поле email обязательно для заполнения."
+                                                    }
+                                                }
+                                            },
+                                            "type": "object"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    },
+                    "403": {
+                        "description": "Вы уже авторизованы",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "type": {
+                                            "type": "string",
+                                            "example": "https://example.com/errors/already-authenticated"
+                                        },
+                                        "title": {
+                                            "type": "string",
+                                            "example": "Already Authenticated"
+                                        },
+                                        "status": {
+                                            "type": "integer",
+                                            "example": 403
+                                        },
+                                        "detail": {
+                                            "type": "string",
+                                            "example": "Вы уже авторизованы!"
+                                        },
+                                        "instance": {
+                                            "type": "string",
+                                            "example": "/api/login"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    },
+                    "401": {
+                        "description": "Ошибка авторизации",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "oneOf": [
+                                        {
+                                            "properties": {
+                                                "type": {
+                                                    "type": "string",
+                                                    "example": "https://example.com/errors/unauthorized"
+                                                },
+                                                "title": {
+                                                    "type": "string",
+                                                    "example": "Unauthorized"
+                                                },
+                                                "status": {
+                                                    "type": "integer",
+                                                    "example": 401
+                                                },
+                                                "detail": {
+                                                    "type": "string",
+                                                    "example": "Неверные учетные данные."
+                                                },
+                                                "instance": {
+                                                    "type": "string",
+                                                    "example": "/api/login"
+                                                }
+                                            },
+                                            "type": "object"
+                                        },
+                                        {
+                                            "properties": {
+                                                "type": {
+                                                    "type": "string",
+                                                    "example": "https://example.com/errors/token-not-found"
+                                                },
+                                                "title": {
+                                                    "type": "string",
+                                                    "example": "Token is invalid or has been revoked"
+                                                },
+                                                "status": {
+                                                    "type": "integer",
+                                                    "example": 401
+                                                },
+                                                "detail": {
+                                                    "type": "string",
+                                                    "example": "Токен недействителен или был отозван"
+                                                },
+                                                "instance": {
+                                                    "type": "string",
+                                                    "example": "/api/login"
+                                                }
+                                            },
+                                            "type": "object"
+                                        }
+                                    ]
+                                }
+                            }
+                        }
+                    },
+                    "500": {
+                        "description": "Внутренняя ошибка сервера",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "type": {
+                                            "type": "string",
+                                            "example": "https://example.com/errors/token"
+                                        },
+                                        "title": {
+                                            "type": "string",
+                                            "example": "An error occurred while validating token"
+                                        },
+                                        "status": {
+                                            "type": "integer",
+                                            "example": 500
+                                        },
+                                        "detail": {
+                                            "type": "string",
+                                            "example": "При проверке токена произошла ошибка"
+                                        },
+                                        "instance": {
+                                            "type": "string",
+                                            "example": "/api/login"
                                         }
                                     },
                                     "type": "object"
@@ -81,7 +281,7 @@
                 ],
                 "summary": "Регистрация нового пользователя",
                 "description": "Создает нового пользователя и возвращает его данные вместе с JWT-токеном.",
-                "operationId": "96c6114f12ed09d2328f8b0b158734fb",
+                "operationId": "0903f2e0df1a8857bee538fc055417f0",
                 "requestBody": {
                     "required": true,
                     "content": {
@@ -116,7 +316,7 @@
                                     },
                                     "phone": {
                                         "type": "string",
-                                        "example": "89123456789"
+                                        "example": "+89123456789"
                                     }
                                 },
                                 "type": "object"
@@ -148,7 +348,7 @@
                                                 },
                                                 "phone": {
                                                     "type": "string",
-                                                    "example": "89123456789"
+                                                    "example": "+89123456789"
                                                 },
                                                 "is_blocked": {
                                                     "type": "boolean",
@@ -310,6 +510,65 @@
                                         "instance": {
                                             "type": "string",
                                             "example": "/api/register"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/health": {
+            "get": {
+                "tags": [
+                    "Health"
+                ],
+                "summary": "Check application health",
+                "operationId": "c09d93bf980e72e094876343292e7602",
+                "responses": {
+                    "200": {
+                        "description": "Application is healthy",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "app": {
+                                            "type": "string",
+                                            "example": "ok"
+                                        },
+                                        "database": {
+                                            "type": "string",
+                                            "example": "ok"
+                                        },
+                                        "redis": {
+                                            "type": "string",
+                                            "example": "ok"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    },
+                    "503": {
+                        "description": "Service unavailable",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "app": {
+                                            "type": "string",
+                                            "example": "failed"
+                                        },
+                                        "database": {
+                                            "type": "string",
+                                            "example": "failed"
+                                        },
+                                        "redis": {
+                                            "type": "string",
+                                            "example": "failed"
                                         }
                                     },
                                     "type": "object"
